azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "vmName": {
      "type": "string",
      "metadata": {
        "description": "Name for the Virtual Machine."
      }
    },
    "adminUsername": {
      "type": "string",
      "metadata": {
        "description": "Username for the Virtual Machine."
      }
    },
    "adminPassword": {
      "type": "securestring",
      "metadata": {
        "description": "Password for the Virtual Machine."
      }
    },

    "dnsLabelPrefix": {
      "type": "string",
      "metadata": {
        "description": "Unique DNS Name for the Public IP used to access the Virtual Machine."
      }
    },
    "vmSize": {
      "type": "string",
      "defaultValue": "Standard_D2",
      "allowedValues": [
        "Standard_A3",
        "Standard_A4",
        "Standard_A5",
        "Standard_A6",
        "Standard_A7",
        "Standard_A8",
        "Standard_A9",
        "Standard_A10",
        "Standard_A11",
        "Standard_D2",
        "Standard_D3",
        "Standard_D4",
        "Standard_D11",
        "Standard_D12",
        "Standard_D13",
        "Standard_D14",
        "Standard_D2_v2",
        "Standard_D3_v2",
        "Standard_D4_v2",
        "Standard_L4s"

      ],
      "metadata": {
        "description": "The size of the VM."
      }
    },
    "windowsOSVersion": {
      "type": "string",
      "defaultValue": "2016-Datacenter",
      "allowedValues": [
        "2008-R2-SP1",
        "2012-Datacenter",
        "2012-R2-Datacenter",
        "2016-Nano-Server",
        "2016-Datacenter-with-Containers",
        "2016-Datacenter"
      ],
      "metadata": {
        "description": "The Windows version for the VM. This will pick a fully patched image of this given Windows version."
      }
    }
  },
  "variables": {
    "storageAccountName": "[concat(uniquestring(resourceGroup().id), 'sawinvm')]",
    "nicName": "myVMNic",
    "addressPrefix": "10.0.0.0/16",
    "location": "[resourceGroup().location]",
    "subnetName": "Subnet",
    "subnetPrefix": "10.0.0.0/24",
    "publicIPAddressName": "myPublicIP",
    "vmSize": "[parameters('vmSize')]",
    "vmName": "[parameters('vmName')]",
    "virtualNetworkName": "MyVNET",
    "networksecuritygroupname": "appNetworkSecurityGroup",
    "networkSecurityGroups_name": "[concat(parameters('vmName'), 'nsg')]",
    "subnetRef": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('subnetName'))]"
  },
  "resources": [
    {
      "type": "Microsoft.Storage/storageAccounts",
      "name": "[variables('storageAccountName')]",
      "apiVersion": "2016-01-01",
      "location": "[variables('location')]",
      "sku": {
        "name": "Standard_LRS"
      },
      "kind": "Storage",
      "properties": { }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[variables('publicIPAddressName')]",
      "location": "[variables('location')]",
      "properties": {
        "publicIPAllocationMethod": "Dynamic",
        "dnsSettings": {
          "domainNameLabel": "[parameters('dnsLabelPrefix')]"
        }
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[variables('virtualNetworkName')]",
      "location": "[variables('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('addressPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('subnetName')]",
            "properties": {
              "addressPrefix": "[variables('subnetPrefix')]"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[variables('nicName')]",
      "location": "[variables('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses/', variables('publicIPAddressName'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('publicIPAddressName'))]"
              },
              "subnet": {
                "id": "[variables('subnetRef')]"
              }
            }
          }
        ]
      }
    },
    {      
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('networksecuritygroupname')]",
      "apiVersion": "2018-02-01",
      "location": "[variables('location')]",     
      "properties": {
        "provisioningState": "Succeeded",
        "resourceGuid": "36e245af-2093-4832-af56-e9f92a419ddc",
        "securityRules": [
          {
            "name": "default-allow-rdp",            
            "properties": {              
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1000,
              "direction": "Inbound",
              "sourcePortRanges": [ ],
              "destinationPortRanges": [ ],
              "sourceAddressPrefixes": [ ],
              "destinationAddressPrefixes": [ ]
            }
          },
          {
            "name": "Port10080",            
            "properties": {             
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "10080",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1010,
              "direction": "Inbound",
              "sourcePortRanges": [ ],
              "destinationPortRanges": [ ],
              "sourceAddressPrefixes": [ ],
              "destinationAddressPrefixes": [ ]
            }
          },
          {
            "name": "Port_10081",            
            "properties": {              
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "10081",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1020,
              "direction": "Inbound",
              "sourcePortRanges": [ ],
              "destinationPortRanges": [ ],
              "sourceAddressPrefixes": [ ],
              "destinationAddressPrefixes": [ ]
            }
          },
          {
            "name": "Port_80",            
            "properties": {              
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1030,
              "direction": "Inbound",
              "sourcePortRanges": [ ],
              "destinationPortRanges": [ ],
              "sourceAddressPrefixes": [ ],
              "destinationAddressPrefixes": [ ]
            }
          },
          {
            "name": "Port_1433",            
            "properties": {              
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "1433",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1040,
              "direction": "Inbound",
              "sourcePortRanges": [ ],
              "destinationPortRanges": [ ],
              "sourceAddressPrefixes": [ ],
              "destinationAddressPrefixes": [ ]
            }
          },
          {
            "name": "Port_5432",            
            "properties": {              
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "5432",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1050,
              "direction": "Inbound",
              "sourcePortRanges": [ ],
              "destinationPortRanges": [ ],
              "sourceAddressPrefixes": [ ],
              "destinationAddressPrefixes": [ ]
            }
          },
          {
            "name": "Port_445",            
            "properties": {              
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "445",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Outbound",
              "sourcePortRanges": [ ],
              "destinationPortRanges": [ ],
              "sourceAddressPrefixes": [ ],
              "destinationAddressPrefixes": [ ]
            }
          },
          {
            "name": "Port445",            
            "properties": {              
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "445",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1060,
              "direction": "Inbound",
              "sourcePortRanges": [ ],
              "destinationPortRanges": [ ],
              "sourceAddressPrefixes": [ ],
              "destinationAddressPrefixes": [ ]
            }
          }
        ],
        "defaultSecurityRules": [
          {
            "name": "AllowVnetInBound",            
            "properties": {              
              "description": "Allow inbound traffic from all VMs in VNET",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 65000,
              "direction": "Inbound",
              "sourcePortRanges": [ ],
              "destinationPortRanges": [ ],
              "sourceAddressPrefixes": [ ],
              "destinationAddressPrefixes": [ ]
            }
          },
          {
            "name": "AllowAzureLoadBalancerInBound",            
            "properties": {              
              "description": "Allow inbound traffic from azure load balancer",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "AzureLoadBalancer",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 65001,
              "direction": "Inbound",
              "sourcePortRanges": [ ],
              "destinationPortRanges": [ ],
              "sourceAddressPrefixes": [ ],
              "destinationAddressPrefixes": [ ]
            }
          },
          {
            "name": "DenyAllInBound",
            "etag": "W/\"c7c3078b-57b9-40a1-9d51-ffe0402e24ee\"",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Deny all inbound traffic",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 65500,
              "direction": "Inbound",
              "sourcePortRanges": [ ],
              "destinationPortRanges": [ ],
              "sourceAddressPrefixes": [ ],
              "destinationAddressPrefixes": [ ]
            }
          },
          {
            "name": "AllowVnetOutBound",            
            "properties": {              
              "description": "Allow outbound traffic from all VMs to all VMs in VNET",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 65000,
              "direction": "Outbound",
              "sourcePortRanges": [ ],
              "destinationPortRanges": [ ],
              "sourceAddressPrefixes": [ ],
              "destinationAddressPrefixes": [ ]
            }
          },
          {
            "name": "AllowInternetOutBound",            
            "properties": {              
              "description": "Allow outbound traffic from all VMs to Internet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "access": "Allow",
              "priority": 65001,
              "direction": "Outbound",
              "sourcePortRanges": [ ],
              "destinationPortRanges": [ ],
              "sourceAddressPrefixes": [ ],
              "destinationAddressPrefixes": [ ]
            }
          },
          {
            "name": "DenyAllOutBound",            
            "properties": {              
              "description": "Deny all outbound traffic",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 65500,
              "direction": "Outbound",
              "sourcePortRanges": [ ],
              "destinationPortRanges": [ ],
              "sourceAddressPrefixes": [ ],
              "destinationAddressPrefixes": [ ]
            }
          }
        ]
      },
      "dependsOn": [ ]
    },
    {
      "apiVersion": "2017-03-30",
      "type": "Microsoft.Compute/virtualMachines",
      "name": "[variables('vmName')]",
      "location": "[variables('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Storage/storageAccounts/', variables('storageAccountName'))]",
        "[resourceId('Microsoft.Network/networkInterfaces/', variables('nicName'))]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "[variables('vmSize')]"
        },
        "osProfile": {
          "computerName": "[variables('vmName')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "MicrosoftWindowsServer",
            "offer": "WindowsServer",
            "sku": "[parameters('windowsOSVersion')]",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage"
          },
          "dataDisks": [
            {
              "diskSizeGB": 1023,
              "lun": 0,
              "createOption": "Empty"
            }
          ]
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces',variables('nicName'))]"
            }
          ]
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": true,
            "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts/', variables('storageAccountName'))).primaryEndpoints.blob]"
          }
        }
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "name": "[concat(parameters('vmName'),'/installlscript')]",
      "location": "[variables('location')]",
      "dependsOn": [
        "[concat('Microsoft.Compute/virtualMachines/',parameters('vmName'))]"
      ],
      "properties": {
        "publisher": "Microsoft.Compute",
        "type": "CustomScriptExtension",
        "typeHandlerVersion": "1.7",
        "autoUpgradeMinorVersion": true,
        "settings": {
          "fileUris": [
            "[uri(deployment().properties.templateLink.uri, 'Scripts/prerequsite.ps1')]"
          ],
          "commandToExecute": "powershell.exe -ExecutionPolicy Unrestricted -File prerequsite.ps1"
        }
      }
    },
    {      
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "3389securitygroup",
      "apiVersion": "2018-02-01",      
      "properties": {        
        "protocol": "TCP",
        "sourcePortRange": "*",
        "destinationPortRange": "3389",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 1000,
        "direction": "Inbound",
        "sourcePortRanges": [ ],
        "destinationPortRanges": [ ],
        "sourceAddressPrefixes": [ ],
        "destinationAddressPrefixes": [ ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups',  variables('networksecuritygroupname'))]"
      ]
    },
    {     
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(variables('networkSecurityGroups_name'), '/', 'Port10080']",
      "apiVersion": "2018-02-01",      
      "properties": {        
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "10080",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 1010,
        "direction": "Inbound",
        "sourcePortRanges": [ ],
        "destinationPortRanges": [ ],
        "sourceAddressPrefixes": [ ],
        "destinationAddressPrefixes": [ ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networksecuritygroupname'))]"
      ]
    },
    {     
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(variables('networkSecurityGroups_name'), '/', 'Port_10081')]",
      "apiVersion": "2018-02-01",      
      "properties": {        
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "10081",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 1020,
        "direction": "Inbound",
        "sourcePortRanges": [ ],
        "destinationPortRanges": [ ],
        "sourceAddressPrefixes": [ ],
        "destinationAddressPrefixes": [ ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networksecuritygroupname'))]"
      ]
    },
    {
     
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(variables('networkSecurityGroups_name'), '/', 'Port_80'))]",
      "apiVersion": "2018-02-01",      
      "properties": {        
        "protocol": "TCP",
        "sourcePortRange": "*",
        "destinationPortRange": "80",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 1030,
        "direction": "Inbound",
        "sourcePortRanges": [ ],
        "destinationPortRanges": [ ],
        "sourceAddressPrefixes": [ ],
        "destinationAddressPrefixes": [ ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networksecuritygroupname'))]"
      ]
    },
    {     
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(variables('networkSecurityGroups_name'), '/', 'Port_1433')]",
      "apiVersion": "2018-02-01",      
      "properties": {        
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "1433",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 1040,
        "direction": "Inbound",
        "sourcePortRanges": [ ],
        "destinationPortRanges": [ ],
        "sourceAddressPrefixes": [ ],
        "destinationAddressPrefixes": [ ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networksecuritygroupname'))]"
      ]
    },
    {     
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(variables('networkSecurityGroups_name'), '/', 'Port_5432')]",
      "apiVersion": "2018-02-01",      
      "properties": {        
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "5432",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 1050,
        "direction": "Inbound",
        "sourcePortRanges": [ ],
        "destinationPortRanges": [ ],
        "sourceAddressPrefixes": [ ],
        "destinationAddressPrefixes": [ ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups',variables('networksecuritygroupname'))]"
      ]
    },
    {     
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(variables('networkSecurityGroups_name'), '/', 'Port_445')]",
      "apiVersion": "2018-02-01",      
      "properties": {
        "provisioningState": "Succeeded",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "445",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 100,
        "direction": "Outbound",
        "sourcePortRanges": [ ],
        "destinationPortRanges": [ ],
        "sourceAddressPrefixes": [ ],
        "destinationAddressPrefixes": [ ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networksecuritygroupname'))]"
      ]
    },
    {     
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(variables('networkSecurityGroups_name'), '/', 'Port_445')]",
      "apiVersion": "2018-02-01",      
      "properties": {        
        "protocol": "TCP",
        "sourcePortRange": "*",
        "destinationPortRange": "445",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 1060,
        "direction": "Inbound",
        "sourcePortRanges": [ ],
        "destinationPortRanges": [ ],
        "sourceAddressPrefixes": [ ],
        "destinationAddressPrefixes": [ ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networksecuritygroupname'))]"
      ]
    }
  ],
  "outputs": {
    "hostname": {
      "type": "string",
      "value": "[reference(variables('publicIPAddressName')).dnsSettings.fqdn]"
    }
  }
}
